--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="mockup-phone">
             <div class="camera"></div>
             <div class="display">
-              <div class="artboard artboard-demo phone-1">
+              <div class="artboard artboard-demo phone-3">
                 <div class="hero bg-base-200 min-h-screen">
                     <div class="hero-content flex-col lg:flex-row-reverse">
                       <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
@@ -23,7 +23,7 @@
                             <label class="label">
                               <span class="label-text">Phone Number</span>
                             </label>
-                            <input id="phone-number" type="Text" placeholder="Your Phone Number" class="input input-bordered" required />
+                            <input id="phone-number" type="Text" placeholder="Your Phone Number" autocomplete="off" class="input input-bordered" required />
                           </div>
                           <div class="form-control">
                             <label class="label">
