--- a/js/index.html
+++ b/js/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
     </main>
-    <script src="js/home.js"></script>
-    <script src="js/cashout.js"></script>
+    <script src="home.js"></script>
+    <script src="cashout.js"></script>
 </body>
 </html>
